--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@nuxt/image": "1.11.0",
     "@nuxt/test-utils": "3.19.2",
     "@nuxt/ui": "^3.3.3",
+    "@types/dompurify": "^3.0.5",
     "@unocss/nuxt": "^66.4.2",
     "better-sqlite3": "^12.2.0",
+    "dompurify": "^3.3.1",
     "element-plus": "^2.11.1",
+    "marked": "^17.0.1",
     "mongodb": "^6.20.0",
     "nuxt": "^4.0.1",
     "opencc-js": "^1.0.5",
